# wasm-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build-libc.sh  build-modules.sh  main.c
modules/: files.c  hello.c  testfile.c
wasi-sdk-build/: VERSION
wasi-sdk-build/share/wasi-sysroot/share/wasm32-wasip1-threads/: predefined-macros.txt
wasi-sdk-build/share/wasi-sysroot/share/wasm32-wasip2/: predefined-macros.txt
